receipts/live-applies/evidence/2026-04-03-ws-0314-mail-platform-submission-debug-r5.txt
runtime-control-lv3 | FAILED | rc=1 >>
  File "<stdin>", line 10
    print(f"LOGIN={client.login(\"server\", password)!r}")
                                 ^
SyntaxError: unexpected character after line continuation characternon-zero return code
